Use new approach to modularization in frontend pages