@@ -2,13 +2,12 @@ package com.jvm_bloggers.domain.published_newsletter_issue;
 
 import com.jvm_bloggers.entities.newsletter_issues.NewsletterIssue;
 import com.jvm_bloggers.entities.newsletter_issues.NewsletterIssueRepository;
+
+import javaslang.collection.List;
 import javaslang.control.Option;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor(onConstructor = @__(@Autowired))
@@ -32,17 +31,15 @@ public class PublishedNewsletterIssueFinder {
     }
 
     public List<PublishedNewsletterIssue> findTop5ByOrderByPublishedDateDesc() {
-        return newsletterIssueRepository.findTop5ByOrderByPublishedDateDesc()
-                .stream()
+        return List.ofAll(newsletterIssueRepository.findTop5ByOrderByPublishedDateDesc())
                 .map(publishedNewsletterIssueBuilder::build)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PublishedNewsletterIssue> findAllByOrderByPublishedDateDesc() {
-        return newsletterIssueRepository.findAllByOrderByPublishedDateDesc()
-                .stream()
+        return List.ofAll(newsletterIssueRepository.findAllByOrderByPublishedDateDesc())
                 .map(publishedNewsletterIssueBuilder::build)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
